@@ -2,6 +2,9 @@
 Release 1.0.1
 =============
 
+* enhance the rejection function of the smart search
+* possibility for the amplitudes [a_min, a_max] to depend on time
+
 =============
 Release 1.0.0
 =============
